--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .idea
 mk-board/config.ini
 mk-board/dockerConf.ini
+mk-board/composer.lock
 mk-board/vendor/
 mk-board/Route/TestRoute.php
 mk-board/view/test/
